Button spacing fixed

--- a/src/assets/styles/_grid.scss
+++ b/src/assets/styles/_grid.scss
@@ -10,5 +10,9 @@
     .col {
       padding: 0 !important;
     }
+
+    .p-button{
+        padding: 0.5rem  1rem !important;
+    }
   }
 }
